--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,295 +1,16 @@
-# .github/workflows/ci-cd.yml
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
-  release:
-    types: [published]
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
+name: Build APK Only
+on: [push]
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_DB: cent_test
-          POSTGRES_USER: cent
-          POSTGRES_PASSWORD: cent_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-      
-      redis:
-        image: redis:7-alpine
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
-
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
-    
-    - name: Install dependencies
-      run: |
-        cd backend
-        npm ci
-    
-    - name: Run linting
-      run: |
-        cd backend
-        npm run lint
-    
-    - name: Run tests
-      run: |
-        cd backend
-        npm test
-      env:
-        DATABASE_URL: postgresql://cent:cent_test@localhost:5432/cent_test
-        REDIS_URL: redis://localhost:6379
-        NODE_ENV: test
-        JWT_SECRET: test_secret
-    
-    - name: Run integration tests
-      run: |
-        cd backend
-        npm run test:integration
-    
-    - name: Run security audit
-      run: |
-        cd backend
-        npm audit --audit-level=high
-    
-    - name: Upload coverage
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./backend/coverage/lcov.info
-        flags: backend
-
-  build-backend:
-    needs: test
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    
-    - name: Log in to Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/backend
-    
-    - name: Build and push backend
-      uses: docker/build-push-action@v4
-      with:
-        context: ./backend
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-    
-    - name: Scan for vulnerabilities
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/backend:${{ github.sha }}
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-    
-    - name: Upload vulnerability report
-      uses: github/codeql-action/upload-sarif@v2
-      if: failure()
-      with:
-        sarif_file: 'trivy-results.sarif'
-
-  build-flutter:
-    needs: test
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.13.0'
-    
-    - name: Install dependencies
-      run: |
-        cd mobile
-        flutter pub get
-    
-    - name: Analyze code
-      run: |
-        cd mobile
-        flutter analyze
-    
-    - name: Run tests
-      run: |
-        cd mobile
-        flutter test --coverage
-    
-    - name: Upload Flutter coverage
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./mobile/coverage/lcov.info
-        flags: flutter
-    
-    - name: Build Android APK
-      run: |
-        cd mobile
-        flutter build apk --release --split-per-abi
-      env:
-        ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-        ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-        ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-        ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-    
-    - name: Build iOS
-      if: runner.os == 'macos'
-      run: |
-        cd mobile
-        flutter build ios --release --no-codesign
-    
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: mobile-builds
-        path: |
-          mobile/build/app/outputs/flutter-apk/
-          mobile/build/ios/ipa/
-
-  deploy-staging:
-    needs: [build-backend, build-flutter]
-    if: github.ref == 'refs/heads/develop'
-    runs-on: ubuntu-latest
-    
-    environment: staging
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-    
-    - name: Deploy to EKS
-      run: |
-        aws eks update-kubeconfig --name cent-cluster-staging --region us-east-1
-        kubectl apply -f k8s/staging/
-        kubectl rollout status deployment/cent-backend -n cent-staging --timeout=300s
-    
-    - name: Run smoke tests
-      run: |
-        ./scripts/smoke-tests.sh staging.cent.com
-    
-    - name: Notify Slack
-      uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      if: always()
-
-  deploy-production:
-    needs: [build-backend, build-flutter]
-    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
-    runs-on: ubuntu-latest
-    
-    environment: production
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-    
-    - name: Deploy to production (blue-green)
-      run: |
-        aws eks update-kubeconfig --name cent-cluster-production --region us-east-1
-        
-        # Deploy to blue environment first
-        kubectl apply -f k8s/production/blue/
-        kubectl rollout status deployment/cent-backend-blue -n cent-production --timeout=300s
-        
-        # Run canary tests
-        ./scripts/canary-tests.sh blue.cent.com
-        
-        # Switch traffic to blue
-        kubectl apply -f k8s/production/ingress-blue.yaml
-        
-        # Wait for traffic to stabilize
-        sleep 60
-        
-        # Deploy to green
-        kubectl apply -f k8s/production/green/
-        kubectl rollout status deployment/cent-backend-green -n cent-production --timeout=300s
-        
-        # Switch traffic to green
-        kubectl apply -f k8s/production/ingress-green.yaml
-        
-        # Clean up blue deployment
-        kubectl delete -f k8s/production/blue/ --wait=true
-    
-    - name: Run comprehensive tests
-      run: |
-        ./scripts/e2e-tests.sh cent.com
-        ./scripts/load-test.sh cent.com
-    
-    - name: Update deployment tracker
-      run: |
-        curl -X POST https://api.cent.com/internal/deployments \
-          -H "Authorization: Bearer ${{ secrets.DEPLOYMENT_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d "{\"version\": \"${{ github.sha }}\", \"environment\": \"production\", \"timestamp\": \"$(date -u +'%Y-%m-%dT%H:%M:%SZ')\"}"
-    
-    - name: Notify teams
-      uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow
-        author_name: Production Deployment
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      if: always()
- 
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - run: flutter build apk --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
+          
