--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build APK 2026
+name: Build APK Final
 on: [push, workflow_dispatch]
 jobs:
   build:
@@ -8,10 +8,18 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build apk --release
-      - uses: actions/upload-artifact@v4
+          cache: true
+      - name: Install Dependencies
+        run: |
+          if [ -d "frontend" ]; then cd frontend; fi
+          flutter pub get
+      - name: Build APK
+        run: |
+          if [ -d "frontend" ]; then cd frontend; fi
+          flutter build apk --release
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: my-app-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: "**/build/app/outputs/flutter-apk/app-release.apk"
           
