--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: final-app-apk
-          path: "**/*.apk" # هذا هو التعديل: سيبحث عن أي ملف ينتهي بـ .apk ويرفعه لك
+          path: "**/*.apk"
           
