--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,15 @@ jobs:
       - name: Clean and Build
         run: |
           find . -name "pubspec.yaml" -exec dirname {} \; | while read dir; do
-            echo "Building in $dir..."
             cd "$dir"
-            flutter clean
             flutter pub get
-            flutter build apk --release
+            flutter build apk --release --no-tree-shake-icons
+            cd -
           done
-      - name: Upload APK
+      - name: Force Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: final-app-apk
           path: "**/*.apk"
+          if-no-files-found: error
           
