--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # تحديث للإصدار الجديد
-      - uses: subosito/flutter-action@v2 # تحديث للإصدار الجديد
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       
@@ -20,7 +20,7 @@ jobs:
           flutter build apk --release
           
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4 # تحديث للإصدار الجديد
+        uses: actions/upload-artifact@v4
         with:
           name: app-release
           path: "**/build/app/outputs/flutter-apk/app-release.apk"
