--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,20 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      
-      - name: Install dependencies
+
+      - name: Build All Possible Paths
         run: |
-          if [ -d "frontend" ]; then cd frontend; fi
-          flutter pub get
-          
-      - name: Build APK
-        run: |
-          if [ -d "frontend" ]; then cd frontend; fi
-          flutter build apk --release
-          
-      - name: Upload Artifact
+          find . -name "pubspec.yaml" -exec dirname {} \; | while read dir; do
+            cd "$dir"
+            flutter pub get
+            flutter build apk --release --no-tree-shake-icons
+            cd -
+          done
+
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: "**/build/app/outputs/flutter-apk/app-release.apk"
+          name: my-final-app
+          path: "**/*.apk"
+          if-no-files-found: warn
           
