--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,15 @@ jobs:
         with:
           channel: 'stable'
 
-      - name: Build All Possible Paths
+      - name: Build APK
         run: |
-          find . -name "pubspec.yaml" -exec dirname {} \; | while read dir; do
-            cd "$dir"
-            flutter pub get
-            flutter build apk --release --no-tree-shake-icons
-            cd -
-          done
+          cd frontend
+          flutter pub get
+          flutter build apk --release --no-tree-shake-icons
 
-      - name: Upload APK Artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: my-final-app
-          path: "**/*.apk"
-          if-no-files-found: warn
+          name: app-release
+          path: frontend/build/app/outputs/flutter-apk/app-release.apk
           
