--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,35 @@
-name: Build APK
-on: [push, workflow_dispatch]
+name: Flutter CI/CD
+
+on:
+  push:
+    branches: [ main, develop ]
+  workflow_dispatch:
+
 jobs:
-  build:
+  build-flutter:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-
-      - name: Build APK
-        run: |
-          cd frontend
-          flutter pub get
-          flutter build apk --release --no-tree-shake-icons
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release
-          path: frontend/build/app/outputs/flutter-apk/app-release.apk
-          
+    - uses: actions/checkout@v4
+    
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: 'stable'
+        cache: true
+    
+    - name: Install dependencies
+      run: |
+        cd frontend
+        flutter pub get
+    
+    - name: Build Android APK
+      run: |
+        cd frontend
+        flutter build apk --release --no-tree-shake-icons
+    
+    - name: Upload Android artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: android-apks
+        path: frontend/build/app/outputs/flutter-apk/app-release.apk
+        
