--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,32 @@
-name: Flutter CI/CD
-
-on:
-  push:
-    branches: [ main, develop ]
-  workflow_dispatch:
-
+name: Final Boss Build
+on: [push, workflow_dispatch]
 jobs:
-  build-flutter:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-        cache: true
-    
-    - name: Install dependencies
-      run: |
-        cd frontend
-        flutter pub get
-    
-    - name: Build Android APK
-      run: |
-        cd frontend
-        flutter build apk --release --no-tree-shake-icons
-    
-    - name: Upload Android artifacts
-      uses: actions/upload-artifact@@v4
-      with:
-        name: android-apks
-        path: frontend/build/app/outputs/flutter-apk/app-release.apk
-        
+      - uses: actions/checkout@v4
+      
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Locate and Build
+        run: |
+          FLUTTER_PATH=$(find . -name "pubspec.yaml" -exec dirname {} \; | head -n 1)
+          cd "$FLUTTER_PATH"
+          flutter pub get
+          flutter build apk --release --no-tree-shake-icons
+
+      - name: Deliver APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: final-app-release
+          path: "**/build/app/outputs/flutter-apk/app-release.apk"
+          
