--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Final Boss Build
+name: Super Final Build
 on: [push, workflow_dispatch]
 jobs:
   build:
@@ -6,27 +6,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
-      - name: Locate and Build
+      - name: Install and Build
         run: |
-          FLUTTER_PATH=$(find . -name "pubspec.yaml" -exec dirname {} \; | head -n 1)
-          cd "$FLUTTER_PATH"
+          cd frontend
           flutter pub get
           flutter build apk --release --no-tree-shake-icons
 
-      - name: Deliver APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: final-app-release
-          path: "**/build/app/outputs/flutter-apk/app-release.apk"
+          name: my-app
+          path: frontend/build/app/outputs/flutter-apk/app-release.apk
           
