--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,20 @@
-name: Super Final Build
+name: Ultimate Final Build
 on: [push, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-
-      - name: Install and Build
+      - name: Force Build
         run: |
-          cd frontend
           flutter pub get
           flutter build apk --release --no-tree-shake-icons
-
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: my-app
-          path: frontend/build/app/outputs/flutter-apk/app-release.apk
+          name: app-release
+          path: "**/build/app/outputs/flutter-apk/app-release.apk"
           
