--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
+      
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
@@ -20,6 +22,6 @@ jobs:
       - name: Universal Upload
         uses: actions/upload-artifact@v4
         with:
-          name: my-final-app
+          name: final-mobile-app
           path: "**/*.apk"
           
