--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,25 +1,36 @@
-name: Final Mobile Build
+name: Ultimate Success Build
 on: [push, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
-      - name: Build APK
+      - name: Locate and Build
         run: |
-          cd mobile
+          # Find where the Flutter project is
+          PROJECT_ROOT=$(find . -name "pubspec.yaml" -exec dirname {} \; | head -n 1)
+          
+          if [ -z "$PROJECT_ROOT" ]; then
+            echo "Error: Could not find your project files. Please ensure you uploaded them."
+            exit 1
+          fi
+          
+          echo "Building project in: $PROJECT_ROOT"
+          cd "$PROJECT_ROOT"
+          
+          # Clean and Build with extra flags to prevent failure
           flutter pub get
-          flutter build apk --release --no-tree-shake-icons
+          flutter build apk --release --no-tree-shake-icons --no-sound-null-safety || flutter build apk --release --no-tree-shake-icons
 
-      - name: Upload APK
+      - name: Final Artifact Upload
         uses: actions/upload-artifact@v4
         with:
-          name: my-app
-          path: "mobile/build/app/outputs/flutter-apk/app-release.apk"
+          name: my-application
+          path: "**/*.apk"
           
