--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Final Mobile Build
+name: Ultimate Success Build
 on: [push, workflow_dispatch]
 jobs:
   build:
@@ -11,15 +11,25 @@ jobs:
         with:
           channel: 'stable'
 
-      - name: Build APK
+      - name: Auto-Locate and Build
         run: |
-          cd mobile
+          # This command finds the exact folder containing pubspec.yaml
+          FLUTTER_PATH=$(find . -name "pubspec.yaml" -exec dirname {} \; | head -n 1)
+          
+          if [ -z "$FLUTTER_PATH" ]; then
+            echo "CRITICAL ERROR: No pubspec.yaml found in the repository. Please verify your files."
+            exit 1
+          fi
+          
+          echo "Found project at: $FLUTTER_PATH"
+          cd "$FLUTTER_PATH"
+          
           flutter pub get
           flutter build apk --release --no-tree-shake-icons
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: success-app
-          path: "mobile/build/app/outputs/flutter-apk/app-release.apk"
+          name: final-app
+          path: "**/*.apk"
           
