--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cent_music
-description: CENT Music Streaming App
+description: CENT Music Streaming Platform
 version: 1.0.0+1
 
 environment:
@@ -8,29 +8,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
-  riverpod: ^2.3.6
-  flutter_riverpod: ^2.3.6
+  cupertino_icons: ^1.0.6
   http: ^1.1.0
-  shared_preferences: ^2.2.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  rive: ^0.11.1
+  provider: ^6.0.5
   just_audio: ^0.9.35
-  audio_service: ^0.18.10
-  rive: ^0.10.3
-  connectivity_plus: ^4.0.2
-  google_sign_in: ^6.1.4
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.14.0
+  audio_service: ^0.18.12
+  path_provider: ^2.1.1
+  cached_network_image: ^3.3.0
+  shared_preferences: ^2.2.2
+  google_fonts: ^6.1.0
+  flutter_svg: ^2.0.7
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.4.0
+  flutter_lints: ^2.0.3
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/animations/
+
+  # If you have assets like images or fonts, add them here:
+  # assets:
+  #   - assets/images/
+  #   - assets/animations/
+  
