--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    flutterRoot = System.getenv('FLUTTER_HOME')
+    flutterRoot = System.getenv('FLUTTER_ROOT')
 }
 
 apply plugin: 'com.android.application'
@@ -41,6 +41,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+}
+
+flutter {
+    source "../.."
 }
 
 dependencies {
