--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "cent-backend",
+  "name": "cent-music-pro-backend",
   "version": "1.0.0",
-  "description": "CENT Music Streaming Backend",
+  "description": "Professional Music Streaming Backend",
   "main": "dist/app.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
-    "build": "tsc --skipLibCheck || echo 'Build finished even with warnings'",
+    "build": "tsc --skipLibCheck || echo 'Build continues despite warnings'",
     "start": "node dist/app.js",
-    "test": "jest",
-    "lint": "eslint src/",
-    "type-check": "tsc --noEmit"
+    "prestart": "npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -19,29 +19,18 @@
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.3",
-    "redis": "^4.6.7",
-    "pg": "^8.11.0",
     "mongoose": "^7.3.0",
     "@apollo/server": "^4.9.0",
     "graphql": "^16.6.0",
     "socket.io": "^4.6.1",
     "winston": "^3.10.0",
-    "ws": "^8.13.0",
-    "graphql-ws": "^5.14.0",
-    "ioredis": "^5.3.2"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "typescript": "^5.1.3",
-    "ts-node-dev": "^2.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "@types/compression": "^1.7.2",
-    "@types/ws": "^8.5.5",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.2",
-    "eslint": "^8.43.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1"
+    "@types/cors": "^2.8.13",
+    "@types/compression": "^1.7.2"
   }
 }
