--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "ws": "^8.13.0",
     "socket.io": "^4.6.1",
     "winston": "^3.10.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ioredis": "^5.3.2",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "typescript": "^5.1.3",
@@ -30,6 +32,7 @@
     "@types/node": "^20.3.1",
     "@types/cors": "^2.8.13",
     "@types/compression": "^1.7.2",
-    "@types/ws": "^8.5.5"
+    "@types/ws": "^8.5.5",
+    "@types/bcryptjs": "^2.4.2"
   }
 }
