--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "cent-music-pro-backend",
+  "name": "smart-music-app-backend",
   "version": "1.0.0",
-  "description": "Professional Music Streaming Backend",
-  "main": "dist/app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "build": "tsc --skipLibCheck || echo 'Done'",
-    "start": "node dist/app.js"
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^6.10.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^7.3.0",
-    "@apollo/server": "^4.9.0",
-    "graphql": "^16.6.0",
-    "graphql-ws": "^5.14.0",
-    "ws": "^8.13.0",
-    "socket.io": "^4.6.1",
-    "winston": "^3.10.0",
-    "dotenv": "^16.3.1",
-    "ioredis": "^5.3.2",
-    "redis": "^4.6.7"
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "typescript": "^5.1.3",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "@types/cors": "^2.8.13",
-    "@types/compression": "^1.7.2",
-    "@types/ws": "^8.5.5",
-    "@types/bcryptjs": "^2.4.2"
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/node": "^20.14.2",
+    "nodemon": "^3.1.3"
   }
 }
