--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.1",
+    "axios": "^1.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
