--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cent.music">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:label="CENT Music"
-        android:name="${applicationName}">
+        android:name="${applicationName}"
+        android:usesCleartextTraffic="true">
         
         <meta-data
             android:name="flutterEmbedding"
