--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_svg: ^2.0.7
   dio: ^5.3.3
   youtube_explode_dart: ^2.2.2
+  # المكتبة الضرورية لتشغيل الفيديو والصوت بدون حظر
+  youtube_player_flutter: ^8.1.2 
 
 dev_dependencies:
   flutter_test:
