--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,14 @@ android {
         targetSdkVersion 34
         versionCode 1
         versionName "1.0.0"
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
@@ -49,4 +52,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.android.support:multidex:1.0.3'
 }
