--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -13,3 +13,13 @@ if (flutterSdkPath == null) {
 }
 
 apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+
+gradle.beforeProject { project ->
+    if (project.hasProperty('android')) {
+        project.android {
+            if (namespace == null) {
+                namespace project.group
+            }
+        }
+    }
+}
