--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,3 +54,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
 }
+
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            project.android {
+                if (namespace == null) {
+                    namespace "com.pichillilorenzo.flutter_inappwebview"
+                }
+            }
+        }
+    }
+}
