--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,7 +4,9 @@ def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
 def properties = new Properties()
 
 if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+    localPropertiesFile.withReader("UTF-8") { reader ->
+        properties.load(reader)
+    }
 }
 
 def flutterSdkPath = properties.getProperty("flutter.sdk")
@@ -13,13 +15,3 @@ if (flutterSdkPath == null) {
 }
 
 apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
-
-gradle.beforeProject { project ->
-    if (project.hasProperty('android')) {
-        project.android {
-            if (namespace == null) {
-                namespace project.group
-            }
-        }
-    }
-}
