--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   youtube_explode_dart: ^2.2.2
-  youtube_player_flutter: ^8.1.2
+  youtube_player_flutter: ^9.1.1
   shared_preferences: ^2.2.2
-  cached_network_image: ^3.3.0
+  cached_network_image: ^3.3.1
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
