--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,18 @@ android {
         versionName "1.0.0"
         multiDexEnabled true
     }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
+        }
+    }
+}
+
+flutter {
+    source "../.."
 }
 
 dependencies {
@@ -43,7 +55,6 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 }
 
-// هذا الجزء هو الحل النهائي لمشكلة الصورة التي أرسلتها
 subprojects {
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
