--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,15 @@
-org.gradle.jvmargs=-Xmx1536M
+# Optimal memory allocation for high-performance builds
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# AndroidX support is mandatory for modern Flutter versions
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Professional Speed Optimizations
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+
+# Fixes for Kotlin and Gradle 8+ compatibility
+kotlin.code.style=official
+android.nonTransitiveRClass=true
